# SnakeGame

./: .gitignore  CMakeLists.txt  README.md
src/: Config.hpp  Food.cpp  Game.cpp  Renderer.cpp  Renderer.hpp  main.cpp
src/Food/: Food.cpp  Food.hpp
src/Game/: Game.cpp  Game.hpp
src/Renderer/: Renderer.cpp
src/Snake/: Snake.cpp  Snake.hpp
tests/: test_snake.cpp
